perf(swm): getChunks returns view instead of full map copy